tests/valid/StaticVar_Valid_14.whiley
int var = 0

public export method test():
    //
    if var < 0:
        return
    else:    
        for i in 0..10
        where var >= 0:
            var = var + 1
        //
        assert var >= 0