tests/invalid/Byte_Invalid_1.whiley
public export method test() :
    byte b = 00000001b
    int i = b * 2
    assert i != 0
